--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <!-- Background Image -->
+    <div class="background-image"></div>
     <div class="background"></div>
     <div class="circle"></div>
     <div class="circle"></div>
@@ -31,14 +32,14 @@
     <div class="circle"></div>
     <!-- Central Content with Date, Text, and Buttons -->
     <div class="center-content">
-        <h1>Memorise is Coming Soon</h1>
+        <h1>Memorise is Coming</h1>
         <p>Join us on this journey. Stay tuned!</p>
         <div class="countdown">
-            <p>Launch Date: <strong>March 1, 2024</strong></p>
+            <p>Launch Date: <strong>Dezember 24, 2024</strong></p>
         </div>
         <div class="buttons">
-            <button class="btn">Learn more!</button>
-            <button class="btn">Follow us</button>
+            <a href="https://fh2412.github.io/memorise-website/"><button class="btn">Learn more!</button></a>
+            <button class="btn">Join us Waiting</button>
         </div>
     </div>
 
