--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <title>Memorise - Coming Soon</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
     <!-- Background Image -->
@@ -40,7 +40,7 @@
         </div>
         <div class="buttons">
             <a href="https://fh2412.github.io/memorise-website/"><button class="btn">Learn more!</button></a>
-            <a href="https://forms.gle/PVGGRjLQJzsUB2Es7"><button class="btn">Join us Waiting</button></a>
+            <button class="btn">Join us Waiting</button>
         </div>
     </div>
 
