--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
         <div class="buttons">
             <a href="https://fh2412.github.io/memorise-website/"><button class="btn">Learn more!</button></a>
-            <button class="btn">Join us Waiting</button>
+            <a href="https://forms.gle/BzAY4K2cnBJtNPKw8"><button class="btn">Join us Waiting</button></a>
         </div>
     </div>
 
