--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <!-- Background Image -->
     <div class="background-image"></div>
+    <div class="background-image" style="top: 909px;"></div>
     <div class="background"></div>
     <div class="circle"></div>
     <div class="circle"></div>
