--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
     <div class="circle"></div>
     <!-- Central Content with Date, Text, and Buttons -->
     <div class="center-content">
-        <h1>Memorise is Coming</h1>
+        <h1>Memorise is coming!</h1>
         <p>Join us on this journey. Stay tuned!</p>
         <div class="countdown">
-            <p>Launch Date: <strong>Dezember 24, 2024</strong></p>
+            <p>Launch date: <strong>Dezember 24, 2024</strong></p>
         </div>
         <div class="buttons">
             <a href="https://fh2412.github.io/memorise-website/"><button class="btn">Learn more!</button></a>
-            <a href="https://forms.gle/BzAY4K2cnBJtNPKw8"><button class="btn">Join us Waiting</button></a>
+            <a href="https://forms.gle/BzAY4K2cnBJtNPKw8"><button class="btn">Conntact us</button></a>
         </div>
     </div>
 
