--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
     <!-- Central Content with Date, Text, and Buttons -->
     <div class="center-content">
         <h1>Memorise is coming!</h1>
-        <p>Join us on this journey. Stay tuned!</p>
+        <p>Join us on this journey. Stay tuned</p>
         <div class="countdown">
             <p>Launch date: <strong>Dezember 24, 2024</strong></p>
         </div>
         <div class="buttons">
-            <a href="https://fh2412.github.io/memorise-website/"><button class="btn">Learn more!</button></a>
+            <a href="https://fh2412.github.io/memorise-website/"><button class="btn">Learn more</button></a>
             <a href="https://forms.gle/BzAY4K2cnBJtNPKw8"><button class="btn">Conntact us</button></a>
         </div>
     </div>
