--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <p>Launch date: <strong>Dezember 24, 2024</strong></p>
         </div>
         <div class="buttons">
-            <a href="https://fh2412.github.io/memorise-website/"><button class="btn">Learn more</button></a>
+            <a href="https://info.memorise.online"><button class="btn">Learn more</button></a>
             <a href="https://forms.gle/BzAY4K2cnBJtNPKw8"><button class="btn">Conntact us</button></a>
         </div>
     </div>
