Update index.html to Beta Test

--- a/index.html
+++ b/index.html
@@ -34,20 +34,20 @@
     <div class="circle"></div>
     <!-- Central Content with Date, Text, and Buttons -->
     <div class="center-content">
-        <h1>Memorise is coming!</h1>
-        <p>Join us on this journey. Stay tuned</p>
+        <h1>Memorise available in Beta!</h1>
+        <p>Join us on this journey and help us test the App</p>
         <div class="countdown">
-            <p>Launch date: <strong>Dezember 24, 2024</strong></p>
+            <p>Request your memorise Beta Account now!</strong></p>
         </div>
         <div class="buttons">
             <a href="https://info.memorise.online"><button class="btn">Learn more</button></a>
-            <a href="https://forms.gle/BzAY4K2cnBJtNPKw8"><button class="btn">Conntact us</button></a>
+            <a href="https://forms.gle/BzAY4K2cnBJtNPKw8"><button class="btn">Join Beta</button></a>
         </div>
     </div>
 
     <!-- Optional Footer -->
     <footer>
-        <p>&copy; 2024 Memorise. All rights reserved.</p>
+        <p>&copy; 2025 Memorise. All rights reserved.</p>
     </footer>
 
     <!-- JavaScript for Shooting Star Effect -->
