redesign by copilot

--- a/index.html
+++ b/index.html
@@ -1,56 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Memorise - Beta Access</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Memorise — Beta Access</title>
+  <meta name="description" content="Join the Memorise Beta and help us test the app." />
+  <meta name="theme-color" content="#0b1024" />
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="button.css">
 </head>
 <body>
-    <!-- Background Image -->
-    <div class="background-image"></div>
-    <div class="background-image" style="top: 909px;"></div>
-    <div class="background"></div>
-    <div class="circle"></div>
-    <div class="circle"></div>
-    <div class="circle"></div>
-    <div class="circle"></div>
-    <div class="circle"></div>
-    <div class="circle"></div>
-    <div class="circle"></div>
-    <div class="circle"></div>
-    <div class="circle"></div>
-    <div class="circle"></div>
-    <div class="circle"></div>
-    <div class="circle"></div>
-    <div class="circle"></div>
-    <div class="circle"></div>
-    <div class="circle"></div>
-    <div class="circle"></div>
-    <div class="circle"></div>
-    <div class="circle"></div>
-    <div class="circle"></div>
-    <div class="circle"></div>
-    <!-- Central Content with Date, Text, and Buttons -->
-    <div class="center-content">
-        <h1>Memorise available in Beta!</h1>
-        <p>Join us on this journey and help us test the App</p>
-        <div class="countdown">
-            <p>Request your memorise Beta Account now!</strong></p>
-        </div>
-        <div class="buttons">
-            <a href="https://info.memorise.online"><button class="btn">Learn more</button></a>
-            <a href="https://forms.gle/BzAY4K2cnBJtNPKw8"><button class="btn">Join Beta</button></a>
-        </div>
-    </div>
+  <div class="background" aria-hidden="true"></div>
+  <div class="stars" aria-hidden="true"></div>
 
-    <!-- Optional Footer -->
-    <footer>
-        <p>&copy; 2025 Memorise. All rights reserved.</p>
-    </footer>
+  <main class="hero" id="main-content">
+    <section class="hero-card" role="region" aria-label="Memorise Beta">
+      <h1><span class="brand">Memorise</span> <span class="beta">— Beta Access</span></h1>
+      <p class="subtitle">Memorise is available in <strong>Beta</strong>. Join us on this journey and help us test the app.</p>
+      <div class="cta">
+        <a href="https://info.memorise.online"><button class="btn btn-primary">Learn more</button></a>
+        <a href="https://forms.gle/BzAY4K2cnBJtNPKw8"><button class="btn btn-secondary">Join Beta</button></a>
+    </section>
+  </main>
 
-    <!-- JavaScript for Shooting Star Effect -->
-    <script src="scripts.js"></script>
+  <script src="scripts.js" defer></script>
 </body>
 </html>
