--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <h1><span class="brand">Memorise</span> <span class="beta">— Beta Access</span></h1>
       <p class="subtitle">Memorise is available in <strong>Beta</strong>. Join us on this journey and help us test the app.</p>
       <div class="cta">
-        <a href="https://info.memorise.online"><button class="btn btn-primary">Learn more</button></a>
+        <a href="https://info.memorise.online"><button class="btn btn-primary">Visit Memorise-Info Page</button></a>
         <a href="https://forms.gle/BzAY4K2cnBJtNPKw8"><button class="btn btn-secondary">Join Beta</button></a>
     </section>
   </main>
