updated content with test room 6. - 9. 11

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
   <main class="hero" id="main-content">
     <section class="hero-card" role="region" aria-label="Memorise Beta">
-      <h1><span class="brand">Memorise</span> <span class="beta">— Beta Access</span></h1>
-      <p class="subtitle">Memorise is available in <strong>Beta</strong>. Join us on this journey and help us test the app.</p>
+      <h1>Memorise - Beta Access</h1>
+      <p class="subtitle">Memorise will be open for a <strong>First Public Test</strong> from <strong>6.11 to 9.11</strong>! Get ready to jump in and try out the app.</p>
       <div class="cta">
         <a href="https://info.memorise.online"><button class="btn btn-primary">Visit Memorise-Info Page</button></a>
-        <a href="https://forms.gle/BzAY4K2cnBJtNPKw8"><button class="btn btn-secondary">Join Beta</button></a>
+        <a href="https://memorise.online"><button class="btn btn-secondary">Try it out!</button></a>
     </section>
   </main>
 
